change some text in index

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 		<div class="container">
 			<h1>Let's Play Game</h1>
-			<h1>
-				<span id="p1Score">0</span>
-				to
-				<span id="p2Score">0</span>
-			</h1>
+			<p>
+				<span id="p1Score">Player1 - 0</span>
+				----
+				<span id="p2Score">Player2 - 0</span>
+			</p>
 
 			<p>Playing to: <span class="playingTo">0</span></p>
 			
@@ -23,9 +23,9 @@
 				<input type="number" id="inputScore">
 			</form>
 			<br />
-			<button class="btn btn-primary" id="p1Btn">Player-1</button>
-			<button class="btn btn-primary" id="p2Btn">Player-2</button>
-			<button id="resetBtn" class="btn btn-primary">Reset</button>
+			<button class="btn btn-warning" id="p1Btn">Player-1</button>
+			<button class="btn btn-warning" id="p2Btn">Player-2</button>
+			<button id="resetBtn" class="btn btn-danger">Reset</button>
 
 		</div>
 		<script src="script.js"></script>
