add html and js in custom branch

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 	<body>
 
 		<div class="container">
-			<h1>Let's Play Game</h1>
+			<h1>T-20 cricket match</h1>
 			<p>
-				<span id="p1Score">Player1 - 0</span>
-				----
-				<span id="p2Score">Player2 - 0</span>
+				<span id="p1Score">Team1 - 0</span>
+				<br>
+				<p id="p1Run"></p>
+				<span id="p2Score">Team2 - 0</span>
+				<p id="p2Run"></p>
 			</p>
 
-			<p>Playing to: <span class="playingTo">0</span></p>
+			<p>Target: <span class="playingTo">0</span></p>
 			
 			<form>
 				<input type="number" id="inputScore">
 			</form>
 			<br />
-			<button class="btn btn-warning" id="p1Btn">Player-1</button>
-			<button class="btn btn-warning" id="p2Btn">Player-2</button>
+			<button class="btn btn-warning" id="p1Btn">Team-1</button>
+			<button class="btn btn-warning" id="p2Btn">Team-2</button>
 			<button id="resetBtn" class="btn btn-danger">Reset</button>
 
 		</div>
