add style in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<br />
 			
 			<div class="button">
+				<h4>(Press the below button to run)</h4><br>
 				<button class="btn btn-success" id="p1Btn">Bangladesh</button>
 				<button class="btn btn-warning" id="p2Btn">India</button><br>
 				<button id="resetBtn" class="btn btn-danger"> Play Again</button>
